--- a/Breath-main/Breath/style.css
+++ b/Breath-main/Breath/style.css
@@ -359,7 +359,10 @@ header ul li a
    clip-path: circle(400px at center bottom);
 }
 }
-
+#leiamais{
+  display: none;
+  flex-direction: column; 
+}
 
 
 
